--- a/helm/dev.values.yaml
+++ b/helm/dev.values.yaml
@@ -405,41 +405,54 @@ initdbScripts:
     db.image_builder.drop();
     db.challenge.drop();
     db.process_engine.drop();
+    db.attempt.drop();
 
     db.image_builder.insertMany([
-      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "imageRegistryLink": "gitlab.com/image_0:latest", "s3Path": "path/image_0.txt"}, 
-      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "imageRegistryLink": "gitlab.com/image_1:latest", "s3Path": "path/image_1.txt"}, 
-      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "imageRegistryLink": "gitlab.com/image_2:latest", "s3Path": "path/image_2.txt"}, 
-      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "imageRegistryLink": "gitlab.com/image_3:latest", "s3Path": "path/image_3.txt"}, 
-      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "imageRegistryLink": "gitlab.com/image_4:latest", "s3Path": "path/image_4.txt"}, 
-      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "imageRegistryLink": "gitlab.com/image_5:latest", "s3Path": "path/image_5.txt"}, 
-      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "imageRegistryLink": "gitlab.com/image_6:latest", "s3Path": "path/image_6.txt"}, 
+      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "imageTag": "latest", "imageRegistryLink": "gitlab.com/image_0:latest"}, 
+
+      {"corId": "ddfd", "creatorName": "cs302", "imageName": "image_10", "imageTag": "latest", "imageRegistryLink": "gitlab.com/image_10:latest"}, 
+      {"corId": "fdff", "creatorName": "cs302", "imageName": "image_11", "imageTag": "latest", "imageRegistryLink": "gitlab.com/image_11:latest"}, 
+      {"corId": "gjgj", "creatorName": "cs302", "imageName": "image_12", "imageTag": "latest", "imageRegistryLink": "gitlab.com/image_12:latest"}, 
+      {"corId": "sffd", "creatorName": "cs302", "imageName": "image_13", "imageTag": "latest", "imageRegistryLink": "gitlab.com/image_13:latest"}, 
     ]);
 
     db.challenge.insertMany([
-      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3c"}, 
-      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3e"}, 
-      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "assignmentId": "653b4c0fb1a622bea03dae40"}, 
-      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "assignmentId": "653b4c0fb1a622bea03dae42"},
-      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "assignmentId": "653b4c0fb1a622bea03dae44"}]
-    );
+      {"cordId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "challengeName": "challenge_0", "imageName": "image_0", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "imageRegistryLink": "gitlab.com/image_0:latest"},
+
+      {"cordId": "1234", "creatorName": "cs302", "challengeName": "challenge_1", "imageName": "image_1", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "imageRegistryLink": "gitlab.com/image_2:latest"},
+      {"cordId": "1235", "creatorName": "cs302", "challengeName": "challenge_2", "imageName": "image_2", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "imageRegistryLink": "gitlab.com/image_3:latest"},
+      {"cordId": "1236", "creatorName": "cs302", "challengeName": "challenge_3", "imageName": "image_3", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "imageRegistryLink": "gitlab.com/image_4:latest"},
+      {"cordId": "1237", "creatorName": "cs302", "challengeName": "challenge_4", "imageName": "image_4", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "imageRegistryLink": "gitlab.com/image_5:latest"},
+    ]);
+
+    db.attempt.insertMany([
+      {"challengeName": "challenge_0", "creatorName": "cs302", "imageRegistryLink": "imageRegistryLink": "gitlab.com/image_0:latest", "participant": "challenger85@google.com", "token": "token_1"},
+      {"challengeName": "challenge_0", "creatorName": "cs302", "imageRegistryLink": "imageRegistryLink": "gitlab.com/image_0:latest", "participant": "challenger74@google.com", "token": "token_2", "sshkey": "sshkey_1", "ipaddr": "ipaddr.test", "port": "1234"},
+      {"challengeName": "challenge_0", "creatorName": "cs302", "imageRegistryLink": "imageRegistryLink": "gitlab.com/image_0:latest", "participant": "challenger100@google.com", "token": "token_3"},
+    ]);
 
     db.process_engine.insertMany([
-      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "event": "Image Created", "eventSuccess": true, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "imageName": "image_7", "event": "Failed to create image", "eventSuccess": false, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "imageName": "image_8", "event": "Received trigger to start image creation", "eventSuccess": false, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b2e8cea6d1925edee637f", "creatorName": "cs302", "imageName": "image_9", "event": "Received trigger to start image creation", "eventSuccess": false, "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
-      {"corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae3c", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae3e", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae40", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
-      {"corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae42", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
-      {"corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae44", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}
+      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "event": "imageCreate", "eventStatus": "imageCreating", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
+      {"corId": "653b2e8cea6d1925edee6376", "event": "imageCreate", "eventStatus": "imageCreated", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 2,"minutes": 1,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
+
+      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "event": "imageCreate", "eventStatus": "imageCreating", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 3,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
+      {"corId": "653b2e8cea6d1925edee6377", "event": "imageCreate", "eventStatus": "imageCreateFailed", "timestamp": {"year": 2023,"month": 11,"day": 3,"hours": 3,"minutes": 1,"seconds": 13,"nanos": 294758750,"timeoffset": null}},
+
+
+      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "challengeName": "challenge_0", "imageName": "image_0", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "challengeCreate", "eventStatus": "challengeCreating", "timestamp": {"year": 2023,"month": 11,"day": 4,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "challengeName": "challenge_0", "imageName": "image_0", "imageTag": "latest", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "challengeCreate", "eventStatus": "challengeCreated", "timestamp": {"year": 2023,"month": 11,"day": 4,"hours": 3,"minutes": 1,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "challengeName": "challenge_0", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "emailSend", "eventStatus": "emailSent", "timestamp": {"year": 2023,"month": 11,"day": 4,"hours": 3,"minutes": 1,"seconds": 14,"nanos": 294758750,"timeoffset": null}}, 
+
+      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "challengeName": "challenge_1", "imageName": "image_1", "imageTag": "latest", "duration": 70, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "challengeCreate", "eventStatus": "challengeCreating", "timestamp": {"year": 2023,"month": 12,"day": 4,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "challengeName": "challenge_1", "imageName": "image_1", "imageTag": "latest", "duration": 70, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "challengeCreate", "eventStatus": "challengeCreateFailed", "timestamp": {"year": 2023,"month": 12,"day": 4,"hours": 2,"minutes": 1,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+
+
+      {"corId": "653b2e8cea6d1925edee637f", "challengeName": "challenge_0", "creatorName": "cs302", "participant": "challenger85@google.com", "token": "token_1", "imageRegistryLink": "gitlab.com/image_0:latest", "event": "challengeStart", "eventStatus": "challengeStarting", "timestamp": {"year": 2024,"month": 11,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637f", "challengeName": "challenge_0", "creatorName": "cs302", "participant": "challenger85@google.com", "token": "token_1", "imageRegistryLink": "gitlab.com/image_0:latest", "event": "challengeStart", "eventStatus": "challengeStarting", "timestamp": {"year": 2024,"month": 11,"day": 3,"hours": 3,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637f", "challengeName": "challenge_0", "creatorName": "cs302", "participant": "challenger85@google.com", "token": "token_1", "imageRegistryLink": "gitlab.com/image_0:latest", "event": "challengeStart", "eventStatus": "challengeStartFailed", "timestamp": {"year": 2024,"month": 11,"day": 3,"hours": 4,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+
+      {"corId": "653b2e8cea6d1925edee637f", "challengeName": "challenge_0", "creatorName": "cs302", "participant": "challenger74@google.com", "token": "token_1", "imageRegistryLink": "gitlab.com/image_0:latest", "event": "challengeStart", "eventStatus": "challengeStarting", "timestamp": {"year": 2024,"month": 12,"day": 3,"hours": 2,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
+      {"corId": "653b2e8cea6d1925edee637f", "challengeName": "challenge_0", "creatorName": "cs302", "participant": "challenger74@google.com", "token": "token_1", "imageRegistryLink": "gitlab.com/image_0:latest", "event": "challengeStart", "eventStatus": "challengeStarted", "timestamp": {"year": 2024,"month": 12,"day": 3,"hours": 4,"minutes": 0,"seconds": 13,"nanos": 294758750,"timeoffset": null}}, 
     ]);
 ## @param initdbScriptsConfigMap Existing ConfigMap with custom initdb scripts
 ##
